logs/bybop.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/arsdkxml'...
Listing './lib/python3.5/site-packages/arsdkxml/xml'...
Listing './lib/python3.5/site-packages/arsdkxml-0.9.1.egg-info'...
Listing './lib/python3.5/site-packages/bybop'...
Compiling './lib/python3.5/site-packages/bybop/Bybop_Device.py'...
***   File "./lib/python3.5/site-packages/bybop/Bybop_Device.py", line 266
    print 'Received command : ' + str(dico)
                              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/bybop/Bybop_Discovery.py'...
***   File "./lib/python3.5/site-packages/bybop/Bybop_Discovery.py", line 88
    print 'Found a service witout info : ' + name + '. Stopping !'
                                         ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/bybop-0.1.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
